[package]
name = "imix"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
build = "build.rs"
edition = "2018"

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[dependencies]
cortexm4 = { git = "git://github.com/tock/tock" }
capsules = { git = "git://github.com/tock/tock" }
kernel = { git = "git://github.com/tock/tock" }
sam4l = { git = "git://github.com/tock/tock" }
tutorial = { path = "../excercises/capsule" }
